--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,5 +24,10 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "../server"
+    }
+  ]
 }
