--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "trpc.ts",
   "scripts": {
-    "dev": "export DATABASE_URL='mongodb://localhost:27017/remind-me?authSource=admin&retryWrites=true&w=majority&replicaSet=rs0&serverSelectionTimeoutMS=2000&directConnection=true'; nodemon src/server.ts",
+    "dev": "export DATABASE_URL='mongodb://localhost:27017/remind-me?authSource=admin&retryWrites=true&w=majority&replicaSet=rs0&serverSelectionTimeoutMS=2000&directConnection=true'; npm-run-all --parallel prisma-watch server",
+    "prisma-watch": "npx prisma generate --watch --schema=./src/db/prisma/schema.prisma",
+    "server": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -24,6 +26,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "nodemon": "^3.1.4",
+    "npm-run-all": "^4.1.5",
     "prisma": "^5.17.0"
   }
 }
